src/test/run-pass/fn-bare-item.rs
fn# f() {
    log "This is a bare function";
}

fn main() {
    f();
}